--- a/Central/Dockerfile
+++ b/Central/Dockerfile
@@ -7,7 +7,6 @@ RUN pip3 install -r requirements.txt
 
 COPY . /app
 EXPOSE 8000:8000
-CMD ["gunicorn", "--preload", "--bind", "0.0.0.0:8000", "-w", "1", "wsgi:app"]
+CMD ["gunicorn", "--preload", "--bind", "0.0.0.0:8000", "-w", "1", "wsgi:app", "--log-level", "debug", "--capture-output"]
 
-
-
+#CMD ["python", "server.py"]
