--- a/processor/Dockerfile
+++ b/processor/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10.10-bullseye
+FROM python:3.9.16-bullseye
 
 WORKDIR /app
 
@@ -7,7 +7,7 @@ RUN pip3 install -r requirements.txt
 
 COPY . /app
 EXPOSE 8080:8080
-CMD ["gunicorn", "--preload", "--bind", "0.0.0.0:8080", "-w", "1", "wsgi:app", "--log-level", "debug", "--capture-output"]
+CMD ["gunicorn", "--preload", "--bind", "0.0.0.0:8080", "-w", "1", "wsgi:app", "--log-level", "info", "--capture-output"]
 
 
 
