--- a/processor/Dockerfile
+++ b/processor/Dockerfile
@@ -7,7 +7,7 @@ RUN pip3 install -r requirements.txt
 
 COPY . /app
 EXPOSE 8080:8080
-CMD ["gunicorn", "--preload", "--bind", "0.0.0.0:8080", "-w", "1", "wsgi:app", "--log-level", "info", "--capture-output"]
+#CMD ["gunicorn", "--preload", "--bind", "0.0.0.0:8080", "-w", "1", "wsgi:app", "--log-level", "info", "--capture-output"]
 
-
+CMD ["python3", "processor.py"]
 
