--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
 
   db:
     image: postgres:15.2-bullseye
+    environment: 
+      POSTGRES_USER: HADES_main
+      POSTGRES_PASSWORD: notsecret
     network_mode: "host"
     ports:
       - "5432:5432"
